# v2v-mission-communication

./: .gitignore  antigravity_handoff_prompt (1).md  antigravity_handoff_prompt.docx  platformio.ini  pyproject.toml  pyrightconfig.json  rules_extracted.txt
challenge1/: README.md
mission_2030/: README.md  __init__.py  instruction.md  nogps_lidar_optical_compass_geofence.param  pyproject.toml  requirements.txt
mission_2030/common/: frames.py  health.py  logging_utils.py  math_utils.py  mavlink_utils.py  time_sync.py  vision_utils.py
mission_2030/config/: airframe.yaml  camera.yaml  markers.yaml  mavlink.yaml  mission.yaml  radio.yaml  ugv.yaml
mission_2030/dennis_test/drone/: 01_basic_flight.py  02_aruco_land.py  03_move_ugv_5ft.py  04_ugv_to_aruco.py  05_fly_side_by_side_forward.py  06_fly_side_by_side_left.py  07_fly_side_by_side_right.py  08_center_hover_high.py  09_center_hover_low.py  10_precision_land.py  11_arm_ugv_avoid.py
mission_2030/radio/: __init__.py  message_types.py  v2v_bridge.py  v2v_protocol.py
mission_2030/uav/: __init__.py  ardupilot_control.py  destination_detection.py  mavlink_client.py  mission1_runner.py  mission2_runner.py  mission3_runner.py  mission_manager.py  precision_landing.py  search_pattern.py  start_mission.bat  start_mission.sh  state_machine.py  takeoff.py  ugv_tracking.py
mission_2030/ugv/: __init__.py  deck_status.py  destination_receiver.py  mavlink_ground_vehicle.py  mission_manager.py  motion_controller.py  obstacle_avoidance.py  start_mission.bat  start_mission.sh  state_machine.py  telemetry_sender.py  ugv_runner.py
(+132 files in other folders)
